--- a/Responsive-Web-Developer/6-checkout-page/index.html
+++ b/Responsive-Web-Developer/6-checkout-page/index.html
@@ -1,1 +1,187 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+ 
+
+  <!-- Svg files -->
+  <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+
+      <symbol id="icon-envelop" viewBox="0 0 32 32">
+        <path d="M29 4h-26c-1.65 0-3 1.35-3 3v20c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-20c0-1.65-1.35-3-3-3zM12.461 17.199l-8.461 6.59v-15.676l8.461 9.086zM5.512 8h20.976l-10.488 7.875-10.488-7.875zM12.79 17.553l3.21 3.447 3.21-3.447 6.58 8.447h-19.579l6.58-8.447zM19.539 17.199l8.461-9.086v15.676l-8.461-6.59z"></path>
+      </symbol>
+
+      <symbol id="icon-phone" viewBox="0 0 32 32">
+        <path d="M22 20c-2 2-2 4-4 4s-4-2-6-4-4-4-4-6 2-2 4-4-4-8-6-8-6 6-6 6c0 4 4.109 12.109 8 16s12 8 16 8c0 0 6-4 6-6s-6-8-8-6z"></path>
+      </symbol>
+
+
+      <symbol id="icon-user" viewBox="0 0 32 32">
+        <path d="M18 22.082v-1.649c2.203-1.241 4-4.337 4-7.432 0-4.971 0-9-6-9s-6 4.029-6 9c0 3.096 1.797 6.191 4 7.432v1.649c-6.784 0.555-12 3.888-12 7.918h28c0-4.030-5.216-7.364-12-7.918z"></path>
+      </symbol>
+
+      <symbol id="icon-home" viewBox="0 0 32 32">
+        <path d="M32 18.451l-16-12.42-16 12.42v-5.064l16-12.42 16 12.42zM28 18v12h-8v-8h-8v8h-8v-12l12-9z"></path>
+      </symbol>
+
+      <symbol id="icon-office" viewBox="0 0 32 32">
+        <path d="M0 32h16v-32h-16v32zM10 4h4v4h-4v-4zM10 12h4v4h-4v-4zM10 20h4v4h-4v-4zM2 4h4v4h-4v-4zM2 12h4v4h-4v-4zM2 20h4v4h-4v-4zM18 10h14v2h-14zM18 32h4v-8h6v8h4v-18h-14z"></path>
+      </symbol>
+
+      <symbol id="icon-earth" viewBox="0 0 32 32">
+        <path d="M16 0c-8.837 0-16 7.163-16 16s7.163 16 16 16 16-7.163 16-16-7.163-16-16-16zM16 30c-1.967 0-3.84-0.407-5.538-1.139l7.286-8.197c0.163-0.183 0.253-0.419 0.253-0.664v-3c0-0.552-0.448-1-1-1-3.531 0-7.256-3.671-7.293-3.707-0.188-0.188-0.442-0.293-0.707-0.293h-4c-0.552 0-1 0.448-1 1v6c0 0.379 0.214 0.725 0.553 0.894l3.447 1.724v5.871c-3.627-2.53-6-6.732-6-11.489 0-2.147 0.484-4.181 1.348-6h3.652c0.265 0 0.52-0.105 0.707-0.293l4-4c0.188-0.188 0.293-0.442 0.293-0.707v-2.419c1.268-0.377 2.61-0.581 4-0.581 2.2 0 4.281 0.508 6.134 1.412-0.13 0.109-0.256 0.224-0.376 0.345-1.133 1.133-1.757 2.64-1.757 4.243s0.624 3.109 1.757 4.243c1.139 1.139 2.663 1.758 4.239 1.758 0.099 0 0.198-0.002 0.297-0.007 0.432 1.619 1.211 5.833-0.263 11.635-0.014 0.055-0.022 0.109-0.026 0.163-2.541 2.596-6.084 4.208-10.004 4.208z"></path>
+      </symbol>
+
+
+      <symbol id="icon-drawer2" viewBox="0 0 32 32">
+        <path d="M31.781 20.375l-8-10c-0.19-0.237-0.477-0.375-0.781-0.375h-14c-0.304 0-0.591 0.138-0.781 0.375l-8 10c-0.142 0.177-0.219 0.398-0.219 0.625v9c0 1.105 0.895 2 2 2h28c1.105 0 2-0.895 2-2v-9c0-0.227-0.077-0.447-0.219-0.625zM30 22h-7l-4 4h-6l-4-4h-7v-0.649l7.481-9.351h13.039l7.481 9.351v0.649z"></path>
+       </symbol>
+
+    </defs>
+  </svg>
+
+
+    <header class="container">
+      <h1>Checkout</h1>
+    </header>
+
+    <section class="section container">
+    	<div class="checkout ">
+	      <h5 class="form-title">Contact infomation</h5>
+	      <form action="">
+
+	        <label>E-mail</label>
+	        <div class="form-header">
+	          <svg class="icon icon-envelop"><use xlink:href="#icon-envelop"></use></svg>
+	          <input type="email" class="email" placeholder="Enter your email..." required>
+	        </div>
+
+	        <label>Phone</label>
+	        <div class="form-header">
+	          <svg class="icon icon-phone"><use xlink:href="#icon-phone"></use></svg>
+	          <input type="tel" class="phone" placeholder="Enter your phone..." required>
+	        </div>
+
+
+	        <h5 class="form-title">Shipping address</h5>
+	        <form action="">
+
+	          <label>Full name</label>
+	          <div class="form-header">
+	            <svg class="icon icon-user"><use xlink:href="#icon-user"></use></svg>
+	            <input type="text" class="name" placeholder="Rodney Cotton" required>
+	          </div>
+
+	          <label>Address</label>
+	          <div class="form-header">
+	            <svg class="icon icon-home"><use xlink:href="#icon-home"></use></svg>
+	            <input type="address" class="address" placeholder="Your address..." required>
+	          </div>
+
+	          <label>City</label>
+	          <div class="form-header">
+	            <svg class="icon icon-office"><use xlink:href="#icon-office"></use></svg>
+	            <input type="address" class="city" placeholder="Your city...">
+	          </div>
+
+	          <div class="flex">
+	              <div class="mg">
+	                <label>Country</label>
+	                <div class="form-header">
+	                 <svg class="icon icon-earth"><use xlink:href="#icon-earth"></use></svg>
+	                  <select name="" id="">
+	                    <option value="0" selected disabled>Your country...</option>
+	                    <option value="0">Turkey</option>
+	                    <option value="0">France</option>
+	                    <option value="0">Holland</option>
+	                  </select>
+	                </div>
+	              </div>
+
+	              <div>
+	                <label>Postal Code</label>
+	                  <div class="form-header">
+	                   <svg class="icon icon-drawer2"><use xlink:href="#icon-drawer2"></use></svg>
+	                    <input type="text" class="postal-code" placeholder="Your postal code...">
+	                  </div>
+	              </div>
+	          </div>
+
+	          <div class="checkbox">
+	            <input type="checkbox" id="check">
+	            <label for="check">Save this information for next time</label>
+	          </div>
+
+	          
+	          <button type="submit">Continue</button>
+
+
+
+	      </form>
+	    </div>
+
+	    <div class="card">
+
+	    	<div class="product">
+	    		<img src="images/photo1.png" alt="photo1">
+	    		<div class="information">
+	    			<h4>Vintage Backbag</h4>
+		    		<div class="price">
+		    			<p>$54.99</p>
+		    			<span>$94.99</span>
+		    		</div>
+		    		<div class="qty">
+		    			<div class="minus custom-number-input__minus">-</div>
+		    			<p class="custom-number-input__number">1</p>
+		    			<div class="plus custom-number-input__plus">+</div>
+		    		</div>
+	    		</div>
+	    	</div>
+
+	    	<div class="product">
+	    		<img src="images/photo2.png" alt="photo2">
+	    		<div class="information">
+	    			<h4>Levi Shoes</h4>
+		    		<div class="price">
+		    			<p>$74.99</p>
+		    			<span>$124.99</span>
+		    		</div>
+		    		<div class="qty">
+		    			<div class="minus custom-number-input__minus">-</div>
+		    			<p class="custom-number-input__number">1</p>
+		    			<div class="plus custom-number-input__plus">+</div>
+		    		</div>
+	    		</div>
+	    	</div>
+
+	    	<div class="item-main">
+	    		<div class="item">
+		    		<p class="item-name">Shipping</p>
+		    		<p class="item-price">$19</p>
+		    	</div>
+		    	
+		    	<div class="item">
+		    		<p class="item-name">Total</p>
+		    		<p class="item-price">$148.98</p>
+		    	</div>
+	    	</div>
+
+	    </div>
+
+    </section>
+
+    <footer>
+    	<p>Cem Bıçakcı @ DevChallenges.io</p>
+    </footer>
+
+
+    <script src="./index.js"></script>
+  </body>
+</html>
 
