--- a/Responsive-Web-Developer/7-edie-homepage/index.html
+++ b/Responsive-Web-Developer/7-edie-homepage/index.html
@@ -25,11 +25,11 @@
             <a href="index.html" class="logo">Edie</a>
 
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Our Works</a></li>
-              <li><a href="#">Clients</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#our-works">Our Works</a></li>
+              <li><a href="#clients">Clients</a></li>
+              <li><a href="#contact">Contact</a></li>
               <label for="check" class="hide">
                 <i class="fas fa-times fa-2x"></i>
               </label>
@@ -48,7 +48,7 @@
             <h1>We create beautiful and fast web services</h1>
           </div>
           <img src="images/heroImage.jpg" alt="heroImage">
-          <div class="main-container main-content">
+          <div class="main-container main-content" id="contact">
             <h2>Story, emotion and purpose</h2>
             <p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</p>
             <small>Want us to contact you?</small>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="container-big">
-        <section class="offer">
+        <section class="offer" id="services">
           <h2 class="offer-title">We offer high<br> demand services</h2>
           <div class="cards">
 
@@ -98,7 +98,7 @@
           </div>
         </section> 
 
-        <section class="projects">
+        <section class="projects" id="our-works">
           <h2 class="offer-title">Good design means<br> good business</h2>
 
           <div class="project">
@@ -150,7 +150,7 @@
           </div>
         </section>
 
-        <section class="section-footer">
+        <section class="section-footer" id="clients">
           <blockquote>
             “Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team.”    
           </blockquote>
