--- a/Responsive-Web-Developer/7-edie-homepage/index.html
+++ b/Responsive-Web-Developer/7-edie-homepage/index.html
@@ -48,7 +48,7 @@
             <h1>We create beautiful and fast web services</h1>
           </div>
           <img src="images/heroImage.jpg" alt="heroImage">
-          <div class="main-container main-content" id="contact">
+          <div class="main-container main-content">
             <h2>Story, emotion and purpose</h2>
             <p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time.</p>
             <small>Want us to contact you?</small>
@@ -166,7 +166,7 @@
       </div> 
 
       <footer>
-        <div class="container-big">
+        <div class="container-big" id="contact">
 
           <nav class="footer-nav">
             <ul >
